--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#00574b</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blueLight">#72bdf1</color>
+    <color name="blueDark">#408BE0</color>
+    <color name="mainBackground">#EBEDF0</color>
+    <color name="mainDarkBackground">#CFD1D3</color>
 </resources>
