--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:background="@color/mainBackground"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:clipToPadding="false">
+        android:clipToPadding="false">
 
     <TextView
             android:text="Откуда играть музыку?"
@@ -28,22 +26,34 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHorizontal_bias="0.5"/>
-    <Button
-            android:text="Выбрать папку"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
+            app:layout_constraintHorizontal_bias="0.5" android:textColor="@color/darkText"/>
 
-            android:background="@drawable/rounded_button"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintVertical_bias="0.043"
-            android:id="@+id/choosingDirectory"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textColor="@android:color/white"
-    />
+    <android.support.v7.widget.CardView android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                                        app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory"
+                                        android:layout_marginBottom="8dp"
+                                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                                        app:layout_constraintVertical_bias="0.01999998"
+                                        app:cardBackgroundColor="@android:color/transparent"
+                                        app:cardCornerRadius="9dp" app:cardElevation="8dp" android:id="@+id/cardView">
+        <android.support.v7.widget.AppCompatButton
+                android:text="Выбрать папку"
+                android:background="@drawable/rounded_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/choosingDirectory"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory"
+                app:layout_constraintVertical_bias="0.038"
+                android:paddingLeft="17dp" android:paddingRight="17dp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp" android:textColor="@android:color/white"
+                android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.498"
+        />
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
