--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,32 +28,23 @@
             android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
             app:layout_constraintHorizontal_bias="0.5" android:textColor="@color/darkText"/>
 
-    <android.support.v7.widget.CardView android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                                        app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory"
-                                        android:layout_marginBottom="8dp"
-                                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                                        app:layout_constraintVertical_bias="0.01999998"
-                                        app:cardBackgroundColor="@android:color/transparent"
-                                        app:cardCornerRadius="9dp" app:cardElevation="8dp" android:id="@+id/cardView">
-        <android.support.v7.widget.AppCompatButton
-                android:text="Выбрать папку"
-                android:background="@drawable/rounded_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/choosingDirectory"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory"
-                app:layout_constraintVertical_bias="0.038"
-                android:paddingLeft="17dp" android:paddingRight="17dp"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp" android:textColor="@android:color/white"
-                android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.498"
-        />
-    </android.support.v7.widget.CardView>
+
+    <Button
+            android:text="Выбрать папку"
+            android:background="@drawable/rounded_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/choosingDirectory"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/chooseAudioDirectory"
+            android:paddingLeft="17dp" android:paddingRight="17dp"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textAllCaps="false"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.04"
+    />
+
 
 </android.support.constraint.ConstraintLayout>
