--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
             android:textSize="15sp"
             android:textAllCaps="false"
             app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.04"
-    />
+            style="@android:style/Widget.Button" android:textStyle="normal"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
 
 
 </android.support.constraint.ConstraintLayout>
