Добавил "файловый менеджер", его начало

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,6 +8,6 @@
         android:layout_height="match_parent"
         android:background="#607D8B"
         android:fitsSystemWindows="true"
-        tools:context=".PlayerActivity">
+        tools:context=".activities.PlayerActivity">
 
 </android.support.constraint.ConstraintLayout>
