--- a/app/src/main/res/layout/activity_choose_folder.xml
+++ b/app/src/main/res/layout/activity_choose_folder.xml
@@ -4,22 +4,67 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.ChooseFolderActivity">
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-              android:id="@+id/pathTextView" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-              android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-              app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
-              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>
+        android:id="@+id/layoutChooseFolder"
+        android:background="@color/mainBackground"
+        tools:context=".activities.filesystem.ChooseFolderActivity">
 
-    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:id="@+id/cardViewScroll"
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        android:layout_marginBottom="8dp"
+                                        app:cardElevation="6dp"
+                                        app:layout_constraintBottom_toTopOf="@+id/recyclerView">
+
+        <HorizontalScrollView android:layout_width="wrap_content"
+                              android:id="@+id/scrollView"
+                              android:fillViewport="true"
+                              android:layout_height="wrap_content" android:scrollbars="none"
+
+                              android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                              android:layout_marginStart="8dp" android:layout_marginTop="8dp">
+
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:id="@+id/pathTextView"
+                      app:layout_constraintTop_toTopOf="parent"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      android:textColor="@android:color/black"
+
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintHorizontal_bias="0.0"
+                      app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+                      app:layout_constraintVertical_bias="0.0"/>
+
+        </HorizontalScrollView>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.RecyclerView android:clipToPadding="false"
+                                            android:layout_width="0dp"
+                                            android:overScrollMode="never"
                                             android:layout_height="0dp" android:id="@+id/recyclerView"
                                             app:layout_constraintStart_toStartOf="parent"
                                             android:layout_marginStart="8dp"
-                                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="9dp"
                                             android:layout_marginBottom="8dp"
                                             app:layout_constraintBottom_toBottomOf="parent"
-                                            app:layout_constraintTop_toBottomOf="@+id/pathTextView">
+                                            app:layout_constraintTop_toBottomOf="@+id/cardViewScroll"
+                                            app:layout_constraintHorizontal_bias="1.0">
     </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:padding="7dp"
+            android:clickable="true" app:srcCompat="@drawable/save_file"
+            android:id="@+id/floatingActionButton"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.89"
+            android:focusable="true"/>
 
 </android.support.constraint.ConstraintLayout>
