--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
 
@@ -10,4 +10,6 @@
         android:fitsSystemWindows="true"
         tools:context=".activities.PlayerActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/bottom_player"/>
+
+</android.support.design.widget.CoordinatorLayout>
