--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="3dp"
+        android:layout_margin="2dp">
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                  android:layout_height="wrap_content">
 
-        <TextView android:layout_width="match_parent"
+        <ImageView android:layout_width="wrap_content" android:layout_height="0dp"
+                   android:src="@drawable/folder_image"
+                   android:id="@+id/imageView"
+                   app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                   android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                   android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                   app:layout_constraintVertical_bias="0.0"
+                   android:scaleType="centerCrop" android:layout_marginEnd="8dp"
+                   app:layout_constraintEnd_toStartOf="@+id/nameOfFile" app:layout_constraintHorizontal_bias="0.0"
+                   android:cropToPadding="false" android:adjustViewBounds="false"/>
+
+        <TextView android:layout_width="0dp"
                   android:layout_height="wrap_content" android:id="@+id/nameOfFile"
                   android:text="Text" android:padding="10dp" android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
-                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp"/>
-
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintStart_toEndOf="@+id/imageView"
+                  app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
 
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
