--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -4,29 +4,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
+        android:layout_height="match_parent"
         tools:context=".activities.PlayerActivity">
 
     <include layout="@layout/main_activity_player"/>
     <include layout="@layout/bottom_sheet"/>
-
-    <android.support.v7.widget.CardView android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:id="@+id/cardView"
-                                        app:layout_anchor="@+id/bottomSheet"
-                                        app:layout_anchorGravity="top">
-
-        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
-                                                     android:layout_height="wrap_content">
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:text="Kvazikapa" android:gravity="center"
-                      android:layout_margin="8dp" android:layout_marginBottom="8dp"
-                      app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
-                      app:layout_constraintVertical_bias="0.0"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
 
 </android.support.design.widget.CoordinatorLayout>
