Добавил выбор трека по клику

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -4,10 +4,18 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.PlayerActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
+        android:id="@+id/playerCoordinatorLayout"
+        tools:context=".activities.player.PlayerActivity">
 
-    <include layout="@layout/main_activity_player"/>
-    <include layout="@layout/bottom_sheet"/>
+
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:id="@+id/trackListView"
+                                            android:layout_height="match_parent"
+                                            android:layout_marginBottom="0dp"
+                                            app:layout_anchor="@+id/bottomSheet"
+                                            app:layout_anchorGravity="top"/>
+
+    <include layout="@layout/bottom_sheet" android:id="@+id/bottomSheet"/>
 
 </android.support.design.widget.CoordinatorLayout>
