--- a/app/src/main/res/drawable/big_player_background.xml
+++ b/app/src/main/res/drawable/big_player_background.xml
@@ -1,4 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="9dp"/>
-    <solid android:color="@color/mainBackground"/>
+    <corners android:topLeftRadius="40dp" android:topRightRadius="40dp"/>
+    <gradient android:endColor="@color/blueLight" android:startColor="@color/blueDark"
+              android:type="linear" android:angle="90"/>
 </shape>
